--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>status404博客</title>
     <link rel="stylesheet" type="text/css" href="static/lib/font/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="static/lib/swiper/css/swiper.min.css">
+    <link rel="stylesheet" type="text/css" href="static/css/common.css">
   </head>
   <body>
     <div id="app">
